edit: synchronized the '!massping' command with the last command changes